<resources>
    <string name="app_name">Preferences Exercise</string>
    <string name="set_update_reminder_frequency">Set Update Reminder Frequency</string>
    <string name="reminder_for_updation">Reminder For Updation</string>
    <string name="lock_the_screen_with_password">Lock The Screen With Password</string>
    <string name="screen_lock">Screen Lock</string>
    <string name="security_settings">Security Settings</string>
    <string name="set_your_password">Set Your Password</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="type_your_frequency">Type Your Frequency</string>
    <string name="save_info">Save</string>
    <string name="display_info">Display</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="Lable_Frequency">Frequency</string>
    <string name="Lable_Password">Password</string>
</resources>
