<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setpassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16sp"
    android:orientation="vertical"
    tools:context=".SetpasswordActivity">

    <TextView
        android:id="@+id/tv_passwordinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/type_your_password"
        android:paddingBottom="10dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_passwordinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginTop="280dp">


        <Button
            android:id="@+id/button_save"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:background="@drawable/mystyle"
            android:text="@string/save_info" />

        <Button
            android:id="@+id/button_display"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:background="@drawable/mystyle"
            android:layout_margin="15sp"
            android:layout_toEndOf="@id/button_save"
            android:layout_toRightOf="@id/button_save"
            android:text="@string/display_info"/>

    </RelativeLayout>


</LinearLayout>
